footer align and other corrections

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,1 @@
-.col-lg-1 {
-  width: 5.3333333%;
-  padding: 0px !important;
-}
-.col-lg-11 {
-  overflow-y: auto;
-}
 
