--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -27,6 +27,8 @@
 }
 
 .card {
+  min-height: 352px;
+  max-height: 360px;
   max-width: 550px;
   border: 0;
   width: 100%;
