--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,7 @@
   font-family: 'Hammersmith One', sans-serif;
   font-weight: 700 !important;
   letter-spacing: 1px;
-  padding: 15px 15px 10px 5px;
+  padding: 10px 15px 10px 5px;
 }
 
 html, body { height: 100%; }
